--- a/styles.css
+++ b/styles.css
@@ -1290,6 +1290,7 @@ h1 {
         order: 1;
         width: 100%;
         height: 200px;
+        margin: 0px;
     }
 
     #search-rezult {
@@ -1315,5 +1316,6 @@ h1 {
         display: none;
         transition: 0.2s ease;
     }
+    
 
 }
