--- a/styles.css
+++ b/styles.css
@@ -202,6 +202,7 @@ body {
 
 .carousel {
     position: relative;
+    width: 100%;
 }
 
 
@@ -209,7 +210,7 @@ body {
     width: 100%;
     height: 100%;
     display: none;
-    object-fit: cover;
+    object-fit: contain;
     transition: opacity 0.5s ease;
 }
 
@@ -265,6 +266,9 @@ button.next:hover {
 
 .main-mobile-icon {
     color: #004526;
+}
+.right-menu{
+    width: 100%;
 }
 
 .left-menu ul li a {
@@ -1286,6 +1290,7 @@ h1 {
         order: 1;
         width: 100%;
         height: 200px;
+        margin: 0px;
     }
 
     #search-rezult {
@@ -1311,5 +1316,6 @@ h1 {
         display: none;
         transition: 0.2s ease;
     }
+    
 
 }
